--- a/src/Components/Pagination/pagination.css
+++ b/src/Components/Pagination/pagination.css
@@ -13,9 +13,6 @@
     text-decoration: none;
 }
 
-.navNumbers li{
-    color: aliceblue;
-}
 .navNumbers li :hover {
     color: darkslategray;
     text-decoration: underline;
@@ -29,6 +26,16 @@
     text-decoration: none;
     color: aliceblue;
     font-size: larger;
+    display: block;
+    width: 1rem;
+    height: 2rem;
+
+    margin-left: 50%;
+    margin-right: 50%;
+    padding-left: 100%;
+    padding-right: 100%;
+    background-color: rgb(47, 79, 79);
+    color: aliceblue;
 }
 
 
@@ -41,15 +48,24 @@
         font-size: x-small;
     }
     .navNumbers li{
-        margin-left: 1%;
-        margin-right: 1%;
-        padding-left: 5%;
-        padding-right: 5%;
-        background-color: darkslategray;
+        width: 1rem;
+        height: 2rem;
+
+        margin-left: 50%;
+        margin-right: 50%;
+        padding-left: 50%;
+        padding-right: 50%;
+        background-color: rgb(47, 79, 79);
+        font-size: 17px;
     }
+
+    .navNumbers li:hover{
+        background-color: rgba(47, 79, 79, 0.462);
+    }
+
     .navNumbers li a {
         color: aliceblue;
-        font-size: 6px;
+        font-size: 10px;
     }
     
 }
